--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "@tailwindcss/vite": "^4.1.11",
     "aos": "^2.3.4",
     "framer-motion": "^12.23.12",
+    "lottie-react": "^2.4.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
+    "react-router": "^7.8.0",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
