--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.8.0",
     "react-toastify": "^11.0.5",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
